I have reneged on the dropdown menu as that is quite difficult, and after two days I couldnt figrure it out, so I will try when I am more experience. Current. Fix the popout menu to only be 30% of the page and have the background blurred and darkened a bit then finish the rest of the section. when clicking the navmenu bring it down to the current section as well.

--- a/src/index.css
+++ b/src/index.css
@@ -61,9 +61,6 @@
   color: black ;
 }
 
-.invert-logo {
-  filter: invert(1);
-}
 
 
 
